apollo-federation/src/connectors/validation/snapshots/validation_tests@mapping_directive.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
assertion_line: 335
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/mapping_directive.graphql
---
[]
