apollo-federation/src/connectors/validation/snapshots/validation_tests@mapping_spread_duplicate_arg.graphql.snap
---
source: apollo-federation/src/connectors/validation/mod.rs
expression: result.errors
input_file: apollo-federation/src/connectors/validation/test_data/mapping_spread_duplicate_arg.graphql
---
[
    Message {
        code: InvalidSelection,
        message: "Spread `...User(...)` provides duplicate argument `limit`.",
        locations: [
            13:18..13:47,
        ],
    },
]
